--- a/pengelola/login.html
+++ b/pengelola/login.html
@@ -15,7 +15,7 @@
 <body class="overflow-hidden">
     <!-- Login Page (initially visible) -->
     <div id="login-page" class="halaman-login bg-white rounded-[16px] h-[878px] relative shadow-[0px_4px_40.2px_0px_rgba(0,0,0,0.25)] overflow-hidden w-full max-w-[1920px] mx-auto">
-        <img class="w-full h-full absolute inset-0 object-cover" src="./image/bg.png" />
+        <img class="w-full h-full absolute inset-0 object-cover" src="bg.png" />
 
         <div class="ellipse-28 bg-white rounded-full opacity-[0.48] w-[251px] h-[87px] absolute left-[571px] top-[137px] blur-[10.15px]"></div>
         <div class="ellipse-29 bg-[rgba(255,255,255,0.56)] rounded-full w-[251px] h-[87px] absolute left-[621px] top-[157px] blur-[22.8px]"></div>
@@ -50,7 +50,7 @@
                 <div class="button text-white text-left font-poppins-semi-bold text-[13px] font-[600] relative">SIGN IN</div>
             </button>
 
-            <img class="logo-mediora-removebg-preview-1 w-[145px] h-[49px] absolute left-[669px] top-[14px] object-cover aspect-[145/49]" src="./image/logo.png" />
+            <img class="logo-mediora-removebg-preview-1 w-[145px] h-[49px] absolute left-[669px] top-[14px] object-cover aspect-[145/49]" src="logo.png" />
             <div class="sign-in2 text-[#424242] text-left font-poppins-semi-bold text-[28px] font-[600] absolute left-[805px] top-[14px]">SIGN IN</div>
             <div class="as-apotek-manager2 text-[#a9a9a9] text-center font-poppins-bold-italic text-[8px] tracking-[0.05em] font-[700] italic absolute left-[805px] top-[50px]">(AS APOTEK MANAGER)</div>
 
@@ -71,7 +71,7 @@
                 </div>
                 <div class="group-4 flex-shrink-0 w-[42px] h-[42px] static">
                     <div class="frame-102 bg-white rounded-[8px] p-[6px] flex flex-row gap-[10px] items-start justify-start absolute left-[115px] top-[31px] shadow-[0px_4px_12px_0px_rgba(0,0,0,0.12)] overflow-hidden hover:bg-gray-100 cursor-pointer">
-                        <img class="devicon-google flex-shrink-0 w-[30px] h-[30px] relative overflow-visible" src="./image/logogoogle.png" />
+                        <img class="devicon-google flex-shrink-0 w-[30px] h-[30px] relative overflow-visible" src="logogoogle.png" />
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
             <!-- Main Card -->
             <div class="absolute inset-0 flex items-center justify-center px-4">
                 <div class="w-full max-w-4xl bg-white/50 rounded-[16px] border border-white/90 shadow-[0px_11px_47.3px_rgba(0,0,0,0.43)] backdrop-blur-[9px] p-8 relative">
-                    <img class="absolute right-8 top-4 w-[120px] h-[40px] object-contain" src="./image/logo.png" />
+                    <img class="absolute right-8 top-4 w-[120px] h-[40px] object-contain" src="logo.png" />
                     <div class="text-right mr-4 mt-2">
                         <div class="text-[24px] font-semibold text-[#424242]">SIGN IN</div>
                         <div class="text-[8px] italic font-bold tracking-wider text-[#a9a9a9]">(AS APOTEK MANAGER)</div>
